styles/globals.css
:root {
  --max-width: 1440px;
  --border-radius: 12px;
  --background-color: #191923;
  --background-front-color: #1e1e28;
  --back-color: #20202a;
  --middle-color-light: #30303c;
  --middle-color: #262631;
  --middle-color-dark: #090916;
  --front-color: #2c2c39;
  --text-color-highlight: #f7f6ff;
  --text-color-gray: #a4a4aa;
  --text-color-gray-semi-dark: #94949a;
  --text-color-gray-dark: #717177;
  --text-color-vivid-light: #ffcc32;
  --text-color-vivid: #FFC107;
  --text-color-vivid-dark: #DFA100;
  --menu-open-transition: 0.5s;
  --menu-open-cubic: ease-out;
  --border-shadow: 0px 0px 7px 0px rgba(15, 15, 20, 0.2);
  --border-shadow-block: 0px 2.5px 12px 0 rgb(15 15 20 / 20%);
  --montain-gradient: linear-gradient(0deg, var(--background-front-color) 0%, var(--middle-color) 100%);
  --svg-basic-height: 1.5em;
  --aside-width: 18em;
  --header-width: 5em;
  --header-width-open: 15em;
  --max-height: 55em;
  --header-height: 4em;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  font-family: 'Poppins', sans-serif;
  font-size: clamp(.9em, 1em, min(1.7vh, 1em));
}

h1,
h2,
h3,
h4 {
  color: var(--text-color-highlight);
}

h1 {
  font-size: 1.5em;
}

h2 {
  font-size: 1.3em;
}

h3 {
  font-size: 1em;
}

p {
  color: var(--text-color-gray);
  font-size: max(.9em, 12px);
}

svg {
  color: var(--text-color-gray-dark);
  user-select: none;
  height: var(--svg-basic-height);
  width: auto;
  transition: color .3s ease-in-out;
}


svg:hover {
  color: var(--text-color-highlight)
}

a {
  color: inherit;
  text-decoration: none;
}


.container {
  display: flex;
  justify-content: center;
  width: 100%;
  min-height: 100vh;
  background-color: var(--background-color);
  padding: 1em;
  max-height: 100vh;
}

.content {
  position: relative;
  display: flex;
  background: linear-gradient(0deg, var(--background-front-color) 0%, var(--front-color) 100%);
  max-width: calc(var(--max-width) - 2em);
  width: 100%;
  -webkit-box-shadow: 0px 0px 20px 0px rgba(20, 20, 30, .2);
  -moz-box-shadow: 0px 0px 20px 0px rgba(20, 20, 30, .2);
  box-shadow: 0px 0px 20px 0px rgba(20, 20, 30, .2);
  overflow: hidden;
}

.main {
  flex: 1;
  padding: 2em;
  flex-shrink: 1;
  padding-right: calc(var(--header-width) + 2em);
  transition: transform var(--menu-open-transition) var(--menu-open-cubic);
  overflow: auto;
  z-index: 5;
}
.main > * {
  position: relative;
  height: auto;
  max-height: var(--max-height);
  min-height: min(var(--max-height), 100%);
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 2em;
}

.main h1,
.main h2,
.main h3,
.main h4 {
    margin-bottom: 1em;
}

.container.open .main {
  transform: translateX(-9.5em);
}

.container.open .content > * {
  pointer-events: none;
}

input, textarea {
  outline: none;
  border: none;
  font-family: inherit;
  min-width: 0;
}

textarea {
  resize: none;
}

input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active,
input:-internal-autofill-selected {
    -webkit-box-shadow: 0 0 0px 5em var(--middle-color) inset;
    -webkit-text-fill-color: var(--text-color-highlight) !important;
}

@media (max-width: 1023px) {
  :root {
    --max-height: fit-content;
  }

  .container {
    padding: 0;
  }

  .main {
    padding: 2em;
    margin-top: var(--header-height);
  }

  .container.open .main {
    transform: translateX(0);
  }
} 

